# Sudan-ERR-Platform

./: .env.template  .eslintrc.js  .gitignore  .replit  LICENSE  LICENSE.md  README.md  SYSTEM_ARCHITECTURE.md  env.local  jest.config.ts  local-humanitarian-web-chat-1f81cd59311e.json  local-humanitarian-web-chat-5b747d2b153d.json  main.py  middleware.tsx  next-i18next.config.js  next.config.js  package-lock.json  package.json  preprocess.py  process_image.py  pyproject.toml  replit.nix  requirements.txt  scan-form-436313-6250060cec14.json  tailwind.config.js  tsconfig.json  vercel.json  wp-config.php
__tests__/: data.test.jsx  forms.test.jsx  index.test.jsx  menu.test.jsx  upload.test.jsx
api/: preprocess.py  scan-custom-form.ts  scan-form.ts
components/: Button.tsx  Calculator.tsx  ChatContainer.tsx  ChooseFiles.tsx  CustomFormReview.tsx  CustomScanBubble.tsx  DynamicActivityForm.tsx  FeedbackForm.tsx  FileUploader.tsx  FillForm.tsx  FormBubble.tsx  Input.tsx  MainApp.tsx  MessageBubble.tsx  OfflineForm.tsx  PrefilledForm.tsx  ScanBubble.tsx
lib/: auth.ts  handleOnline.js  i18n.ts  serviceWorkerRegistration.js  sessionUtils.js  supabaseClient.ts  uploadImageAndInsertRecord.ts  uploadToPrivateBucket.ts
pages/: MainApp.tsx  _app.tsx  _document.tsx  fill-form.tsx  index.tsx  login.tsx  menu.tsx  offline-mode.tsx  project-application.tsx  project-status.tsx  register.tsx  reset-password.tsx  scan-custom-form.tsx  scan-form.tsx  scan-prefill-form.tsx  update-password.tsx
public/: manifest.json  service-worker-offline.js  sw.js
services/: auth.ts  createAuthenticatedClient.ts  handleOnline.js  i18n.ts  newSupabaseClient.ts  serviceWorkerRegistration.js  sessionUtils.js  supabaseClient.ts  uploadImageAndInsertRecord.ts  uploadImages.ts  uploadPaths.ts
static/: script.js  style.css
styles/: globals.css
templates/: index.html
types/: pdf-parse.d.ts  project.ts
(+164 files in other folders)
