[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
telegram = "^0.0.1"
flask-socketio = "^5.3.6"
flask = "^3.0.3"
google-auth = "^2.34.0"
gspread = "^6.1.2"
xds-protos = "^1.66.0"
twilio = "^9.2.4"
pdfkit = "^1.0.0"
fpdf = "^1.7.2"
openai = "^1.43.0"
pytesseract = "^0.3.13"
pandas = "^2.2.2"
requests = "^2.32.3"
opencv-python = "^4.10.0.84"
send = "^0.2.0"
socketio = "^0.2.1"
flask-session = "^0.8.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"