[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
pytesseract = "^0.3.13"
google-auth = "^2.35.0"
xds-protos = "^1.66.2"
fastapi-socketio = "^0.0.10"
twilio = "^9.3.3"
uvicorn = "^0.31.1"
opencv-python = "^4.10.0.84"
supabase = "^2.9.0"
openai = "^1.51.2"
gspread = "^6.1.3"
requests = "^2.32.3"
fpdf = "^1.7.2"
pandas = "^2.2.3"
fastapi = "^0.115.2"
redis = "^5.1.1"
socketio = "^0.2.1"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"